docs(dip3): move Pro*Tx network information fields to annexure

--- a/dip-0003.md
+++ b/dip-0003.md
@@ -117,8 +117,7 @@ The transaction consists of the following data in the payload area:
 | type | uint_16 | 2 | Masternode type. Default set to 0. |
 | mode | uint_16 | 2 | Masternode mode. Default set to 0. |
 | collateralOutpoint | COutpoint | 36 | The collateral outpoint. |
-| ipAddress | byte[] | 16 | IPv6 address in network byte order. Only IPv4 mapped addresses are allowed (to be extended in the future) |
-| port | uint_16 | 2 | Port (network byte order) |
+| networkInfo | byte[] | variable | Network connection information (see [annexure](dip-0003/network-info.md) for more information) |
 | KeyIdOwner | CKeyID | 20 | The public key hash used for owner related signing (ProTx updates, governance voting) |
 | PubKeyOperator | BLSPubKey | 48 | The public key used for operational related signing (network messages, ProTx updates) |
 | KeyIdVoting | CKeyID | 20 | The public key hash used for voting. |
@@ -166,8 +165,7 @@ The transaction consists of the following data in the payload area:
 | version | uint_16 | 2 | ProUpServTx version number.  Set to 2 once v19 fork activates |
 | type | uint_16 | 0 or 2 | Masternode type. Only present for version 2. |
 | proTXHash | uint256 | 32 | The hash of the initial ProRegTx |
-| ipAddress | byte[] | 16 | IPv6 address in network byte order. Only IPv4 mapped addresses are allowed (to be extended in the future) |
-| port | uint_16 | 2 | Port (network byte order) |
+| networkInfo | byte[] | variable | Network connection information (see [annexure](dip-0003/network-info.md) for more information) |
 | scriptOperatorPayoutSize | compactSize uint | 1-9 | Size of the Payee Script. |
 | scriptOperatorPayout | Script | Variable | Payee script (p2pkh/p2sh) |
 | inputsHash | uint256 | 32 | The SHA256 hash of all the outpoints of the transaction inputs |
