docs(dip3): list "Masternode Types" as Appendix B

--- a/dip-0003.md
+++ b/dip-0003.md
@@ -22,6 +22,7 @@
 1. [Masternode Rewards](#masternode-rewards)
 1. [Selecting Quorums](#selecting-quorums)
 1. [Appendix A: Reasons for Self Revocation of Operators](#appendix-a-reasons-for-self-revocation-of-operators)
+1. [Appendix B: Masternode Types](#appendix-b-masternode-types)
 1. [Copyright](#copyright)
 
 ## Special Mention
@@ -364,6 +365,10 @@ The individual quorum types present in Dash are not subject to this DIP and shou
 | 1 | Termination of Service |
 | 2 | Compromised Keys |
 | 3 | Change of Keys (Not compromised) |
+
+## Appendix B: Masternode Types
+
+See [masternode types table](dip-0003/masternode-types.md)
 
 ## Copyright
 
