docs: rename leftover HPMN usage to EvoNode

--- a/dip-0003.md
+++ b/dip-0003.md
@@ -268,11 +268,11 @@ Reorganisations of the chain must also correctly undo changes to the chain-tips 
 
 A ProRegTx is invalid if any of these conditions are true:
 
-In the case of type 0:
+In the case of default masternodes (type 0):
   1. collateralOutpoint `hash` is null but an output with 1000 DASH is not present at position `n` of the ProRegTx outputs
   2. collateralOutpoint `hash` is not null but an output with 1000 DASH can't be found in the UTXO specified by the `hash` and `n`
 
-In the case of type 1:
+In the case of EvoNodes (type 1):
   1. collateralOutpoint `hash` is null but an output with 4000 DASH is not present at position `n` of the ProRegTx outputs
   2. collateralOutpoint `hash` is not null but an output with 4000 DASH can't be found in the UTXO specified by the `hash` and `n`
 
@@ -330,9 +330,9 @@ The new system removes the need for masternode reward payment votes and allows t
 The new rules to determine the next block’s payee are:
 
 1. Take the last block's payee. If it is a regular masternode (type 0), go to step 5.
-2. If the last HPMN payee was already paid 4 blocks in a row, go to step 5.
-3. If the last HPMN is not present in the current masternode list anymore, go to step 5.
-4. Select last HPMN payee as the next block's payee. Return.
+2. If the last EvoNode (type 1) payee was already paid 4 blocks in a row, go to step 5.
+3. If the last EvoNode is not present in the current masternode list anymore, go to step 5.
+4. Select last EvoNode payee as the next block's payee. Return.
 5. Take the valid masternode subset of the previous block
 6. Sort the set in ascending order by "testHeight" and “ProRegTx hash”. “testHeight” is determined for each individual entry and equals the “last paid height” (or “registered height” if the masternode was never paid). If the masternode was PoSe-banned before and revived later, the “revival height” of the masternode is used instead of the “registered height”. If the “testHeight” of two masternodes is identical, the ProRegTx hash acts as a deterministic tie breaker.
 7. Take the first entry of the resulting list and use this as the next block’s payee.
