--- a/dip-0004.md
+++ b/dip-0004.md
@@ -110,7 +110,7 @@ Clients with protocol version greater than or equal to 70227 will receive the fo
 
 | Field               | Type | Size | Description                       |
 |---------------------| ---- | ---- |-----------------------------------|
-| type | uint_16 | 0 or 2 | Masternode type. 0 for regular masternode, 1 for HPMN. |
+| type | uint_16 | 0 or 2 | Masternode type. 0 for regular masternode, 1 for EvoNode. |
 | platformHTTPPort | uint_16 | 0 or 2 | TCP port of Platform HTTP/API interface (network byte order). Only present for masternode type 1. |
 | platformNodeID | byte[] | 0 or 20 | Dash Platform P2P node ID, derived from P2P public key. Only present for masternode type 1. |
 
