--- a/dip-0028.md
+++ b/dip-0028.md
@@ -229,6 +229,11 @@ type 1 requires a 4000 DASH collateral.
 
 #### Changes in ProRegTx
 
+> [!WARNING]  
+> The fields `platformP2PPort`, and `platformHTTPPort` are deprecated with the implementation of the
+> Extended Network Information Format as defined in [Appendix C](dip-0003/network-info.md#extended-format)
+> of DIP 0003. The information given below is provided to document historical behavior.
+
 A ProRegTx with masternode type 1 indicates registration of a 4000 DASH collateral evonode.
 
 If the `version` is 2 and the `type` is 1, then the `platformNodeID`, `platformP2PPort`, and
@@ -242,6 +247,11 @@ fields.
 | platformHTTPPort | uint_16 | 0 or 2 bytes | TCP port of Platform HTTP/API interface (network byte order). Only present for masternode type 1. | Only when `version` is 2 and `type` is 1. |
 
 #### Changes in ProUpServTx
+
+> [!WARNING]
+> The fields `platformP2PPort`, and `platformHTTPPort` are deprecated with the implementation of the
+> Extended Network Information Format as defined in [Appendix C](dip-0003/network-info.md#extended-format)
+> of DIP 0003. The information given below is provided to document historical behavior.
 
 Since the ProUpServTx does not currently include the `type` field, version 2 of the transaction adds
 it and serializes it right after the `version` field. A ProUpServTx of masternode type 1 indicates
@@ -259,6 +269,11 @@ fields.
 | platformHTTPPort | uint_16 | 0 or 2 bytes | TCP port of Platform HTTP/API interface (network byte order). Only present for masternode type 1. | Only when `version` is 2 and `type` is 1. |
 
 #### Added validation rules
+
+> [!WARNING]
+> The fields `platformP2PPort`, and `platformHTTPPort` are deprecated with the implementation of the
+> Extended Network Information Format as defined in [Appendix C](dip-0003/network-info.md#extended-format)
+> of DIP 0003. The information given below is provided to document historical behavior.
 
 The following new ProRegTx rules are added and are only applicable when `type` is 1:
 
