--- a/dip-0003.md
+++ b/dip-0003.md
@@ -128,8 +128,7 @@ The transaction consists of the following data in the payload area:
 | scriptPayout | Script | Variable | Payee script (p2pkh/p2sh) |
 | inputsHash | uint256 | 32 | The SHA256 hash of all the outpoints of the transaction inputs |
 | platformNodeID | byte[] | 0 or 20 | Dash Platform P2P node ID, derived from P2P public key. Only present for masternode type 1. |
-| platformP2PPort | uint_16 | 0 or 2 | TCP port of Dash Platform peer-to-peer communication between nodes (network byte order). Only present for masternode type 1. |
-| platformHTTPPort | uint_16 | 0 or 2 | TCP port of Platform HTTP/API interface (network byte order). Only present for masternode type 1. |
+| platformInfo | byte[] | variable | Platform network connection information (see [appendix](#appendix-c-network-information) for more information) |
 | payloadSigSize | compactSize uint | 1-9 | Size of the Signature |
 | payloadSig | unsigned char[] | Variable | Signature of the hash of the ProTx fields. Signed with the key corresponding to the collateral outpoint in case the collateral is not part of the ProRegTx itself, empty otherwise. |
 
@@ -172,8 +171,7 @@ The transaction consists of the following data in the payload area:
 | scriptOperatorPayout | Script | Variable | Payee script (p2pkh/p2sh) |
 | inputsHash | uint256 | 32 | The SHA256 hash of all the outpoints of the transaction inputs |
 | platformNodeID | byte[] | 0 or 20 | Dash Platform P2P node ID, derived from P2P public key. Only present for masternode type 1. |
-| platformP2PPort | uint_16 | 0 or 2 | TCP port of Dash Platform peer-to-peer communication between nodes (network byte order). Only present for masternode type 1. |
-| platformHTTPPort | uint_16 | 0 or 2 | TCP port of Platform HTTP/API interface (network byte order). Only present for masternode type 1. |
+| platformInfo | byte[] | variable | Platform network connection information (see [appendix](#appendix-c-network-information) for more information) |
 | payloadSig | BLSSig | 96 | Signature of the hash of the ProUpServTx fields. Signed by the Operator. |
 
 The different versions are:
@@ -306,7 +304,7 @@ Please note that while deploying DIP3, additional and temporary validation rules
 
 A ProRegTx or ProUpServTx is invalid if any of these conditions are true (applicable only when type is 1):
 
-  1. platformP2PPort, platformHTTPPort and networkInfo entries are not distinct.
+  1. platformInfo fails validation [(see rules)](dip-0003/network-info.md#plinfo_rules).
   2. platformNodeID is null or is a non-hex string.
   3. platformNodeID is not unique in the network.
 
@@ -367,7 +365,7 @@ See [masternode types table](dip-0003/masternode-types.md)
 
 ## Appendix C: Network Information
 
-Masternode network information is defined in the [appendix](dip-0003/network-info.md)
+Masternode and Platform network information are defined in the [appendix](dip-0003/network-info.md)
 
 ## Copyright
 
